// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEmptyScreen renders correctly with edit mode 1`] = `
<div
  class="dshEmptyWidget testClass"
  data-test-subj="emptyDashboardWidget"
>
  <span
    color="subdued"
    data-euiicon-type="visAreaStacked"
  />
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <h3
    class="euiTitle emotion-euiTitle-xs"
  >
    Add your first visualization
  </h3>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-subdued"
  >
    <span>
      Create content that tells a story about your data.
    </span>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with readonly mode 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow euiPage--restrictWidth-custom dshStartScreen"
  data-test-subj="dashboardEmptyReadOnly"
  style="max-width: 500px;"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter dshStartScreen__pageContent emotion-euiPanel-grow-m-plain-hasShadow"
      role="main"
    >
      <figure
        class="euiImageWrapper emotion-euiImageWrapper"
      >
        <img
          alt=""
          class="euiImage emotion-euiImage-original"
          src="/plugins/home/assets/welcome_graphic_light_2x.png"
        />
      </figure>
      <div
        class="euiText emotion-euiText-m"
      >
        <p
          style="font-weight: bold;"
        >
          This dashboard is empty.
        </p>
      </div>
      <div
        class="euiText emotion-euiText-m-euiTextColor-subdued"
      >
        You need additional privileges to edit this dashboard.
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with view mode 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow euiPage--restrictWidth-custom dshStartScreen"
  data-test-subj="dashboardEmptyReadWrite"
  style="max-width: 500px;"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter dshStartScreen__pageContent emotion-euiPanel-grow-m-plain-hasShadow"
      role="main"
    >
      <figure
        class="euiImageWrapper emotion-euiImageWrapper"
      >
        <img
          alt=""
          class="euiImage emotion-euiImage-original"
          src="/plugins/home/assets/welcome_graphic_light_2x.png"
        />
      </figure>
      <div
        class="euiText emotion-euiText-m"
      >
        <p
          style="font-weight: bold;"
        >
          This dashboard is empty. Let’s fill it up!
        </p>
      </div>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="dshStartScreen__panelDesc"
      >
        <div
          class="euiText emotion-euiText-m-euiTextColor-subdued"
        >
          <p>
            Click edit in the menu bar above to start adding panels.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
